Add strong to digital privacy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -67,7 +67,7 @@
 				<div class="container">
 					<div class="mb-4"><img src="assets/zksnacks-logo-white.png" style="width: 425px"> </div>
 					<p class="lead">
-						Nowadays it is all about individuals’ digital privacy, governments and organisations are
+						Nowadays it is all about individuals’ <strong>digital privacy</strong>, governments and organisations are
 						making steps to protect privacy in the digital world. We believe that privacy is both
 						a fundamental human right and business need that should be preserved at all times.
 						This is why we focus on your digital financial privacy.
