--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -68,9 +68,9 @@
 					<div class="mb-4"><img src="assets/zksnacks-logo-white.png" style="width: 425px"> </div>
 					<p class="lead">
 						Nowadays it is all about individuals’ <strong>digital privacy</strong>, governments and organisations are
-						making steps to protect privacy in the digital world. We believe that privacy is both
+						making steps to <strong>protect privacy in the digital world</strong>. We believe that privacy is both
 						a fundamental human right and business need that should be preserved at all times.
-						This is why we focus on your digital financial privacy.
+						This is why <strong>we focus on your digital financial privacy</strong>.
 					</p>
 				</div>
 			</div>
@@ -83,14 +83,14 @@
 							<div class="card-body">
 								<h2 class="card-title underline-title mb-4">Mission</h2>
 								<p class="card-text text-center">
-									zkSNACKs was established to research the possibilities for Bitcoin fungibility
+									zkSNACKs was established to research the possibilities for <strong>Bitcoin fungibility</strong>
 									enhancements and provide different products ensuring the desired privacy.
 									<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy">Many
 										believes that Bitcoin is anonymous </a>
 									but in reality the Blockchain is transparent.
 								</p>
 								<p class="card-mission text-center">
-									Our mission is to equip you with powerful tools to secure your privacy.
+									Our mission is to equip you with powerful tools to <strong>secure your privacy</strong>.
 								</p>
 							</div>
 						</div>
@@ -133,9 +133,9 @@
 							<img class="m-auto" alt="Wasabi Wallet" src="assets/wasabi_wallet.png" style="width:235px">
 							<div class="card-body">
 								<p class="card-text">
-									zkSNACKs’ flagship product is a privacy oriented Bitcoin wallet, called the Wasabi
-									Wallet. <br>
-									<a class="go-to" href="http://wasabiwallet.io">Go to website.</a>
+									zkSNACKs’ flagship product is a <strong>privacy oriented Bitcoin wallet</strong>, called the <a class="go-to" href="https://wasabiwallet.io"> Wasabi
+									Wallet</a>. <br>
+									
 								</p>
 
 							</div>
