Changed the link

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -167,7 +167,7 @@
 						<div class="card development-card h-100 px-2 py-3">
 							<img class="svg-icon mb-0" alt="Lightning Network integration" src="assets/interface.svg">
 							<div class="card-body development-card-body">
-								Wasabi Wallet listed on <a class="bitcoin-anonymous" href="http://bitcoin.org">
+								Wasabi Wallet listed on <a class="bitcoin-anonymous" href="https://bitcoin.org/" target="_blank">
 									http://bitcoin.org </a>
 							</div>
 						</div>
