Changed the link

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -223,7 +223,7 @@
 							<a class="slide"
 								href="https://coinpick.today/wasabi-fulfills-security-expectations-to-become-the-most-secure-bitcoin-wallet/"
 								target="_blank"> <img src="assets/client-logos/coinpick.png" alt="coinpick"> </a>
-							<a class="slide" href="https://cryptochan.org/stream/id/1532515705/" target="_blank"> <img
+							<a class="slide" href="https://www.coindesk.com/privacy-bitcoin-wallets/" target="_blank" rel="external nofollow"> <img
 									src="assets/client-logos/cryptochan.png" alt="cryptochan">
 							</a>
 							<a class="slide" href="https://cryptoinfobase.com/wasabi-wallet-btc-anonymity/"
