Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -218,11 +218,11 @@
 					<div class="col-lg-12 col-md-8 col-12 m-auto mt-3">
 						<div class="customer-logos">
 							<a class="slide" href="https://www.coindesk.com/privacy-bitcoin-wallets/" target="_blank">
-								<img src="assets/client-logos/CoinDesk_logo.png" alt="CoinDesk">
+								<img src="assets/client-logos/CoinDesk_logo.png" alt="CoinDesk" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://coinpick.today/wasabi-fulfills-security-expectations-to-become-the-most-secure-bitcoin-wallet/"
-								target="_blank"> <img src="assets/client-logos/coinpick.png" alt="coinpick"> </a>
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/coinpick.png" alt="coinpick" loading="lazy"> </a>
 							<a class="slide" href="https://www.coindesk.com/privacy-bitcoin-wallets/" target="_blank" rel="external nofollow"> <img
 									src="assets/client-logos/cryptochan.png" alt="cryptochan">
 							</a>
