Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -224,7 +224,7 @@
 								href="https://coinpick.today/wasabi-fulfills-security-expectations-to-become-the-most-secure-bitcoin-wallet/"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/coinpick.png" alt="coinpick" loading="lazy"> </a>
 							<a class="slide" href="https://cryptochan.org/stream/id/1532515705/" target="_blank" rel="external nofollow"> <img
-									src="assets/client-logos/cryptochan.png" alt="cryptochan">
+									src="assets/client-logos/cryptochan.png" alt="cryptochan" loading="lazy">
 							</a>
 							<a class="slide" href="https://cryptoinfobase.com/wasabi-wallet-btc-anonymity/"
 								target="_blank">
