Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -230,7 +230,7 @@
 								target="_blank">
 								<img src="assets/client-logos/cryptoinfobase.png" alt="cryptoinfobase">
 							</a>
-							<a class="slide" href="https://www.cryptotraders.eu/what-is-wasabi-wallet/" target="_blank">
+							<a class="slide" href="https://www.cryptotraders.eu/what-is-wasabi-wallet/" target="_blank" rel="external nofollow">
 								<img src="assets/client-logos/cryptotraders.png" alt="cryptotraders"> </a>
 							<a class="slide"
 								href="https://finance.yahoo.com/news/bitcoin-privacy-takes-another-step-203038327.html"
