Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -231,7 +231,7 @@
 								<img src="assets/client-logos/cryptoinfobase.png" alt="cryptoinfobase">
 							</a>
 							<a class="slide" href="https://www.cryptotraders.eu/what-is-wasabi-wallet/" target="_blank" rel="external nofollow">
-								<img src="assets/client-logos/cryptotraders.png" alt="cryptotraders"> </a>
+								<img src="assets/client-logos/cryptotraders.png" alt="cryptotraders" loading="lazy"> </a>
 							<a class="slide"
 								href="https://finance.yahoo.com/news/bitcoin-privacy-takes-another-step-203038327.html"
 								target="_blank"> <img src="assets/client-logos/Yahoo_Finance_Logo.png"
