--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -234,7 +234,7 @@
 								<img src="assets/client-logos/cryptotraders.png" alt="cryptotraders" loading="lazy"> </a>
 							<a class="slide"
 								href="https://finance.yahoo.com/news/bitcoin-privacy-takes-another-step-203038327.html"
-								target="_blank"> <img src="assets/client-logos/Yahoo_Finance_Logo.png"
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Yahoo_Finance_Logo.png"
 									alt="Yahoo_Finance">
 							</a>
 							<a class="slide"
