Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -239,7 +239,7 @@
 							</a>
 							<a class="slide"
 								href="https://www.reddit.com/r/Bitcoin/comments/8wk63k/wasabi_privacy_focused_bitcoin_wallet_for_desktop/"
-								target="_blank"> <img src="assets/client-logos/reddit.png" alt="reddit"></a>
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/reddit.png" alt="reddit" loading="lazy"></a>
 							<a class="slide"
 								href="https://www.ccn.com/bitcoin-privacy-takes-another-step-forward-with-wasabi-wallet-launch/"
 								target="_blank"> <img src="assets/client-logos/CCN-Logo.png" alt="CCN-Logo"> </a>
