Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -242,7 +242,7 @@
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/reddit.png" alt="reddit" loading="lazy"></a>
 							<a class="slide"
 								href="https://www.ccn.com/bitcoin-privacy-takes-another-step-forward-with-wasabi-wallet-launch/"
-								target="_blank"> <img src="assets/client-logos/CCN-Logo.png" alt="CCN-Logo"> </a>
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/CCN-Logo.png" alt="CCN-Logo" loading="lazy"> </a>
 							<a class="slide"
 								href="https://medium.com/@nopara73/wasabi-privacy-focused-bitcoin-wallet-for-desktop-3962d567045a"
 								target="_blank"> <img src="assets/client-logos/medium-logo.jpg" alt="medium-logo">
