Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -254,7 +254,7 @@
 							</a>
 							<a class="slide"
 								href="https://bitcoinexchangeguide.com/wasabi-bitcoin-wallet-privacy-focused-crypto-wallet-launched-for-desktop/"
-								target="_blank"> <img src="assets/client-logos/Bitcoin-Exchange-Guide.png"
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Bitcoin-Exchange-Guide.png"
 									alt="Bitcoin-Exchange-Guide">
 							</a>
 							<a class="slide" href="https://steemit.com/bitcoin/@sames/wasabi-wallet-bitcoin-privacy"
