--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -255,7 +255,8 @@
 							<a class="slide"
 								href="https://bitcoinexchangeguide.com/wasabi-bitcoin-wallet-privacy-focused-crypto-wallet-launched-for-desktop/"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Bitcoin-Exchange-Guide.png"
-									alt="Bitcoin-Exchange-Guide">
+									alt="Bitcoin-Exchange-Guide" loading="lazy">
+
 							</a>
 							<a class="slide" href="https://steemit.com/bitcoin/@sames/wasabi-wallet-bitcoin-privacy"
 								target="_blank"> <img src="assets/client-logos/steemit.png" alt="steemit"> </a>
