Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -259,7 +259,8 @@
 
 							</a>
 							<a class="slide" href="https://steemit.com/bitcoin/@sames/wasabi-wallet-bitcoin-privacy"
-								target="_blank"> <img src="assets/client-logos/steemit.png" alt="steemit"> </a>
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/steemit.png" alt="steemit" loading="lazy"> </a>
+
 							<a class="slide"
 								href="https://www.tokendaily.co/p/wasabi-privacy-focused-bitcoin-wallet-for-desktop"
 								target="_blank"> <img src="assets/client-logos/cryptowiki.png" alt="cryptowiki">
