Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -263,7 +263,8 @@
 
 							<a class="slide"
 								href="https://www.tokendaily.co/p/wasabi-privacy-focused-bitcoin-wallet-for-desktop"
-								target="_blank"> <img src="assets/client-logos/cryptowiki.png" alt="cryptowiki">
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/cryptowiki.png" alt="cryptowiki" loading="lazy">
+
 							</a>
 							<a class="slide"
 								href="https://cryptowiki.ru/article/wasabi-wallet-obeshaet-sdelat-bitkoin-tranzakcii-deistvitelno-privatnymi.html"
