Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -269,7 +269,7 @@
 							<a class="slide"
 								href="https://cryptowiki.ru/article/wasabi-wallet-obeshaet-sdelat-bitkoin-tranzakcii-deistvitelno-privatnymi.html"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/nulltx.png" alt="nulltx" loading="lazy"> </a>
-							<a class="slide" href="https://nulltx.com/what-is-wasabi-wallet/" target="_blank"> <img
+							<a class="slide" href="https://nulltx.com/what-is-wasabi-wallet/" target="_blank" rel="external nofollow"> <img
 									src="assets/client-logos/Coin-News-Telegraph-logo.png" alt="Coin-News-Telegraph">
 							</a>
 							<a class="slide"
