--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -270,7 +270,7 @@
 								href="https://cryptowiki.ru/article/wasabi-wallet-obeshaet-sdelat-bitkoin-tranzakcii-deistvitelno-privatnymi.html"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/nulltx.png" alt="nulltx" loading="lazy"> </a>
 							<a class="slide" href="https://nulltx.com/what-is-wasabi-wallet/" target="_blank" rel="external nofollow"> <img
-									src="assets/client-logos/Coin-News-Telegraph-logo.png" alt="Coin-News-Telegraph">
+									src="assets/client-logos/Coin-News-Telegraph-logo.png" loading="lazy" alt="Coin-News-Telegraph">
 							</a>
 							<a class="slide"
 								href="https://cryptovest.com/features/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
