Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -274,7 +274,7 @@
 							</a>
 							<a class="slide"
 								href="https://cryptovest.com/features/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
-								target="_blank"> <img src="assets/client-logos/Bitcoin-Insight-Logo.png"
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Bitcoin-Insight-Logo.png"
 									alt="Bitcoin-Insight">
 							</a>
 							<a class="slide"
