Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -275,7 +275,7 @@
 							<a class="slide"
 								href="https://cryptovest.com/features/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Bitcoin-Insight-Logo.png"
-									alt="Bitcoin-Insight">
+									alt="Bitcoin-Insight" loading="lazy">
 							</a>
 							<a class="slide"
 								href="http://www.bitcoin-insight.com/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
