--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -279,7 +279,7 @@
 							</a>
 							<a class="slide"
 								href="http://www.bitcoin-insight.com/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
-								target="_blank"> <img src="assets/client-logos/btc_manager.png" alt="btc_manager">
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/btc_manager.png" alt="btc_manager" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://btcmanager.com/making-bitcoin-transactions-untraceable-with-the-wasabi-wallet/"
