Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -283,7 +283,7 @@
 							</a>
 							<a class="slide"
 								href="https://btcmanager.com/making-bitcoin-transactions-untraceable-with-the-wasabi-wallet/"
-								target="_blank"> <img src="assets/client-logos/Insidebitcoins.png" alt="Insidebitcoins">
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Insidebitcoins.png" alt="Insidebitcoins" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://insidebitcoins.com/news/making-bitcoin-transactions-untraceable-with-the-wasabi-wallet/175864"
