Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -287,7 +287,7 @@
 							</a>
 							<a class="slide"
 								href="https://insidebitcoins.com/news/making-bitcoin-transactions-untraceable-with-the-wasabi-wallet/175864"
-								target="_blank"> <img src="assets/client-logos/coinstaker.jpg" alt="coinstaker">
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/coinstaker.jpg" alt="coinstaker" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://bitcoinmagazine.com/articles/bitcoin-privacycoin-tech-making-bitcoin-more-private/"
