--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -291,7 +291,7 @@
 							</a>
 							<a class="slide"
 								href="https://bitcoinmagazine.com/articles/bitcoin-privacycoin-tech-making-bitcoin-more-private/"
-								target="_blank"> <img src="assets/client-logos/Coinrussia.png" alt="Coinrussia">
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Coinrussia.png" alt="Coinrussia" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://coinrussia.ru/blockchain/the-release-of-the-beta-version-of-wasabi-wallet/"
