Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -295,7 +295,8 @@
 							</a>
 							<a class="slide"
 								href="https://coinrussia.ru/blockchain/the-release-of-the-beta-version-of-wasabi-wallet/"
-								target="_blank"> <img src="assets/client-logos/blockpublisher_logo.png"
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/blockpublisher_logo.png"
+
 									alt="blockpublisher">
 							</a>
 							<a class="slide"
