Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -297,7 +297,7 @@
 								href="https://coinrussia.ru/blockchain/the-release-of-the-beta-version-of-wasabi-wallet/"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/blockpublisher_logo.png"
 
-									alt="blockpublisher">
+									alt="blockpublisher" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://blockpublisher.com/wasabi-fulfills-security-expectations-to-become-the-most-secure-bitcoin-wallet/"
