Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -301,7 +301,7 @@
 							</a>
 							<a class="slide"
 								href="https://blockpublisher.com/wasabi-fulfills-security-expectations-to-become-the-most-secure-bitcoin-wallet/"
-								target="_blank"> <img src="assets/client-logos/digitalbitcoinlogo.png"
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/digitalbitcoinlogo.png"
 									alt="digitalbitcoin">
 							</a>
 							<a class="slide"
