--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -302,7 +302,7 @@
 							<a class="slide"
 								href="https://blockpublisher.com/wasabi-fulfills-security-expectations-to-become-the-most-secure-bitcoin-wallet/"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/digitalbitcoinlogo.png"
-									alt="digitalbitcoin">
+									alt="digitalbitcoin" loading="lazy">
 							</a>
 							<a class="slide"
 								href="https://www.nasdaq.com/article/bitcoin-as-a-privacycoin-this-tech-is-making-bitcoin-more-private-cm1016978"
