Add external nofollow

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -306,7 +306,7 @@
 							</a>
 							<a class="slide"
 								href="https://www.nasdaq.com/article/bitcoin-as-a-privacycoin-this-tech-is-making-bitcoin-more-private-cm1016978"
-								target="_blank"> <img src="assets/client-logos/Bitcoin_Kurier.png" alt="Bitcoin_Kurier">
+								target="_blank" rel="external nofollow"> <img src="assets/client-logos/Bitcoin_Kurier.png" alt="Bitcoin_Kurier" loading="lazy">
 							</a>
 						</div>
 					</div>
