Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -338,7 +338,8 @@
 								<p class="card-text">Co-Founder, CEO</p>
 								<div class="contact-logos">
 									<a href="mailto:gergely.hajdu@zksnacks.com"><img src="assets/envelope-solid.svg"
-											alt="email">
+											alt="email" loading="lazy">
+
 									</a>
 									<a href="https://www.linkedin.com/in/gergelyhajdu" target="_blank"><img class="ml-1"
 											src="assets/linkedin-in-brands.svg" alt="linkedin"> </a>
