Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -342,7 +342,7 @@
 
 									</a>
 									<a href="https://www.linkedin.com/in/gergelyhajdu" target="_blank"><img class="ml-1"
-											src="assets/linkedin-in-brands.svg" alt="linkedin"> </a>
+											src="assets/linkedin-in-brands.svg" alt="linkedin" loading="lazy"> </a>
 								</div>
 							</div>
 						</div>
