--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -350,7 +350,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/thumb-2.jpg">
+								<img class="contact-picture" src="assets/contact/thumb-2.jpg" loading="lazy">
 								<h4 class="card-title">BALINT HARMAT</h4>
 								<hr>
 								<p class="card-text">Co-Founder, CEO</p>
