--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -356,7 +356,7 @@
 								<p class="card-text">Co-Founder, CEO</p>
 								<div class="contact-logos">
 									<a href="mailto:balint.harmat@zksnacks.com"> <img src="assets/envelope-solid.svg"
-											alt="email">
+											alt="email" loading="lazy">
 									</a>
 									<a href="https://www.linkedin.com/in/balint-harmat-0a673634/" target="_blank"> <img
 											class="ml-1" src="assets/linkedin-in-brands.svg" alt="linkedin"> </a>
