Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -359,7 +359,8 @@
 											alt="email" loading="lazy">
 									</a>
 									<a href="https://www.linkedin.com/in/balint-harmat-0a673634/" target="_blank"> <img
-											class="ml-1" src="assets/linkedin-in-brands.svg" alt="linkedin"> </a>
+											class="ml-1" src="assets/linkedin-in-brands.svg" alt="linkedin" loading="lazy"> </a>
+
 								</div>
 							</div>
 						</div>
