Add target blank

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -85,7 +85,8 @@
 								<p class="card-text text-center">
 									zkSNACKs was established to research the possibilities for <strong>Bitcoin fungibility</strong>
 									enhancements and provide different products ensuring the desired privacy.
-									<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy">Many
+									<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy" target="_blank">Many
+>Many
 										believes that Bitcoin is anonymous </a>
 									but in reality the Blockchain is transparent.
 								</p>
