--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -374,7 +374,7 @@
 								<hr>
 								<p class="card-text">Co-Founder, Head of Research </p>
 								<div class="contact-logos">
-									<a href="mailto:adam.ficsor@zksnacks.com"> <img src="assets/envelope-solid.svg">
+									<a href="mailto:adam.ficsor@zksnacks.com"> <img src="assets/envelope-solid.svg" loading="lazy">
 									</a>
 									<a href="https://github.com/nopara73/" target="_blank"> <img class="ml-1"
 											src="assets/github-brands.svg" alt="github"> </a>
