Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -377,7 +377,7 @@
 									<a href="mailto:adam.ficsor@zksnacks.com"> <img src="assets/envelope-solid.svg" loading="lazy">
 									</a>
 									<a href="https://github.com/nopara73/" target="_blank"> <img class="ml-1"
-											src="assets/github-brands.svg" alt="github"> </a>
+											src="assets/github-brands.svg" alt="github" loading="lazy"> </a>
 									<a href="https://twitter.com/nopara73" target="_blank"> <img class="ml-1"
 											src="assets/twitter-brands.svg" alt="twitter"> </a>
 									<a href="https://medium.com/@nopara73" target="_blank"> <img class="ml-1"
