Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -379,7 +379,7 @@
 									<a href="https://github.com/nopara73/" target="_blank"> <img class="ml-1"
 											src="assets/github-brands.svg" alt="github" loading="lazy"> </a>
 									<a href="https://twitter.com/nopara73" target="_blank"> <img class="ml-1"
-											src="assets/twitter-brands.svg" alt="twitter"> </a>
+											src="assets/twitter-brands.svg" alt="twitter" loading="lazy"> </a>
 									<a href="https://medium.com/@nopara73" target="_blank"> <img class="ml-1"
 											src="assets/medium-brands.svg" alt="medium"> </a>
 								</div>
