--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -381,7 +381,7 @@
 									<a href="https://twitter.com/nopara73" target="_blank"> <img class="ml-1"
 											src="assets/twitter-brands.svg" alt="twitter" loading="lazy"> </a>
 									<a href="https://medium.com/@nopara73" target="_blank"> <img class="ml-1"
-											src="assets/medium-brands.svg" alt="medium"> </a>
+											src="assets/medium-brands.svg" alt="medium" loading="lazy"> </a>
 								</div>
 							</div>
 						</div>
