--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -389,7 +389,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/unnamed.png">
+								<img class="contact-picture" src="assets/contact/unnamed.png" loading="lazy">
 								<h4 class="card-title">LUCAS ONTIVERO</h4>
 								<hr>
 								<p class="card-text">Lead Engineer</p>
