Add loading lazy

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -395,7 +395,7 @@
 								<p class="card-text">Lead Engineer</p>
 								<div class="contact-logos">
 									<a href="https://github.com/lontivero" target="_blank"> <img
-											src="assets/github-brands.svg" alt="github"> </a>
+											src="assets/github-brands.svg" alt="github" loading="lazy"> </a>
 								</div>
 							</div>
 						</div>
