--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -496,8 +496,8 @@
 							<a href="https://www.facebook.com/Zksnacks-486381568466077/" target="_blank"> <img
 									class="facebook" src="assets/facebook-f-brands.svg" alt="facebook"> </a>
 						</div>
-						<div class="col-3 align-self-center text-center" target="_blank">
-							<a href="https://www.linkedin.com/company/zksnacks/"> <img
+						<div class="col-3 align-self-center text-center" >
+							<a href="https://www.linkedin.com/company/zksnacks/" target="_blank"> <img
 									src="assets/linkedin-in-brands.svg" alt="linkedin"> </a>
 						</div>
 					</div>
