--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -403,7 +403,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
+								<img class="contact-picture" src="assets/contact/david.jpg" loading="lazy">
 								<h4 class="card-title">David Molnar</h4>
 								<hr>
 								<p class="card-text">CTO</p>
