--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -369,7 +369,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/1112.jpg" loading="lazy">
+								<img class="contact-picture" src="assets/contact/adam.jpg" loading="lazy">
 								<h4 class="card-title">ADAM FICSOR </h4>
 								<hr>
 								<p class="card-text">Co-Founder, Head of Research </p>
