--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -351,7 +351,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/thumb-2.jpg" loading="lazy">
+								<img class="contact-picture" src="assets/contact/balint.jpg" loading="lazy">
 								<h4 class="card-title">BALINT HARMAT</h4>
 								<hr>
 								<p class="card-text">Co-Founder, CEO</p>
@@ -369,7 +369,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/1112.jpg" loading="lazy">
+								<img class="contact-picture" src="assets/contact/adam.jpg" loading="lazy">
 								<h4 class="card-title">ADAM FICSOR </h4>
 								<hr>
 								<p class="card-text">Co-Founder, Head of Research </p>
@@ -403,8 +403,8 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
-								<h4 class="card-title">David Molnar</h4>
+								<img class="contact-picture" src="assets/contact/david.jpg" loading="lazy">
+								<h4 class="card-title">DAVID MOLNAR</h4>
 								<hr>
 								<p class="card-text">CTO</p>
 							</div>
