--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -333,7 +333,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/thumb-1.jpg" loading="lazy">
+								<img class="contact-picture" src="assets/contact/greg.jpg" loading="lazy">
 								<h4 class="card-title">GERGELY HAJDU</h4>
 								<hr>
 								<p class="card-text">Co-Founder, CEO</p>
