--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -389,7 +389,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/unnamed.png" loading="lazy">
+								<img class="contact-picture" src="assets/contact/lucas1.jpg" loading="lazy">
 								<h4 class="card-title">LUCAS ONTIVERO</h4>
 								<hr>
 								<p class="card-text">Lead Engineer</p>
@@ -407,13 +407,22 @@
 								<h4 class="card-title">DAVID MOLNAR</h4>
 								<hr>
 								<p class="card-text">CTO</p>
+								<div class="contact-logos">
+									<a href="mailto:molnardavid84@gmail.com"> <img src="assets/envelope-solid.svg" loading="lazy">
+									</a>
+									<a href="https://github.com/molnard/" target="_blank"> <img class="ml-1"
+											src="assets/github-brands.svg" alt="github" loading="lazy"> </a>
+									<a href="https://twitter.com/molnardavid84" target="_blank"> <img class="ml-1"
+											src="assets/twitter-brands.svg" alt="twitter" loading="lazy"> </a>
+									
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
+								<img class="contact-picture" src="assets/contact/dan1.jpg" loading="lazy">
 								<h4 class="card-title">Daniel Walmsley</h4>
 								<hr>
 								<p class="card-text">Avalonia developer</p>
@@ -433,7 +442,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
+								<img class="contact-picture" src="assets/contact/jumar1.jpg" loading="lazy">
 								<h4 class="card-title">Jumar Macato</h4>
 								<hr>
 								<p class="card-text">Developer</p>
@@ -443,7 +452,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
+								<img class="contact-picture" src="assets/contact/martin.jpg" loading="lazy">
 								<h4 class="card-title">Martin Rimoczi</h4>
 								<hr>
 								<p class="card-text">Junior developer</p>
@@ -453,7 +462,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
+								<img class="contact-picture" src="assets/contact/daniel.jpg" loading="lazy">
 								<h4 class="card-title">Daniel Beluska</h4>
 								<hr>
 								<p class="card-text">Head of Marketing</p>
@@ -463,23 +472,14 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
+								<img class="contact-picture" src="assets/contact/max1.jpg" loading="lazy">
 								<h4 class="card-title">Max Hillebrand</h4>
 								<hr>
 								<p class="card-text">Key account manager</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-3 col-md-6 col-12">
-						<div class="card ">
-							<div class="card-body">
-								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
-								<h4 class="card-title">Aviv Milner</h4>
-								<hr>
-								<p class="card-text">Researcher</p>
-							</div>
-						</div>
-					</div>
+					
 				</div>
 				<div class="zksnacks-contact mt-5">
 					<div class="row">
