--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -334,7 +334,7 @@
 						<div class="card ">
 							<div class="card-body">
 								<img class="contact-picture" src="assets/contact/greg.jpg" loading="lazy">
-								<h4 class="card-title">GERGELY HAJDU</h4>
+								<h4 class="card-title">Gergely Hajdu</h4>
 								<hr>
 								<p class="card-text">Co-Founder, CEO</p>
 								<div class="contact-logos">
@@ -352,7 +352,7 @@
 						<div class="card ">
 							<div class="card-body">
 								<img class="contact-picture" src="assets/contact/balint.jpg" loading="lazy">
-								<h4 class="card-title">BALINT HARMAT</h4>
+								<h4 class="card-title">Balint Harmat</h4>
 								<hr>
 								<p class="card-text">Co-Founder, CEO</p>
 								<div class="contact-logos">
@@ -370,7 +370,7 @@
 						<div class="card ">
 							<div class="card-body">
 								<img class="contact-picture" src="assets/contact/adam.jpg" loading="lazy">
-								<h4 class="card-title">ADAM FICSOR </h4>
+								<h4 class="card-title">Adam Ficsor </h4>
 								<hr>
 								<p class="card-text">Co-Founder, Head of Research </p>
 								<div class="contact-logos">
@@ -390,7 +390,7 @@
 						<div class="card ">
 							<div class="card-body">
 								<img class="contact-picture" src="assets/contact/lucas1.jpg" loading="lazy">
-								<h4 class="card-title">LUCAS ONTIVERO</h4>
+								<h4 class="card-title">Lucas Ontivero</h4>
 								<hr>
 								<p class="card-text">Lead Engineer</p>
 								<div class="contact-logos">
@@ -404,7 +404,7 @@
 						<div class="card ">
 							<div class="card-body">
 								<img class="contact-picture" src="assets/contact/david.jpg" loading="lazy">
-								<h4 class="card-title">DAVID MOLNAR</h4>
+								<h4 class="card-title">David Molnar</h4>
 								<hr>
 								<p class="card-text">CTO</p>
 								<div class="contact-logos">
