--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -442,7 +442,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/jumar1.jpg" loading="lazy">
+								<img class="contact-picture" src="assets/contact/jumar.jpg" loading="lazy">
 								<h4 class="card-title">Jumar Macato</h4>
 								<hr>
 								<p class="card-text">Developer</p>
