--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -472,7 +472,7 @@
 					<div class="col-lg-3 col-md-6 col-12">
 						<div class="card ">
 							<div class="card-body">
-								<img class="contact-picture" src="assets/contact/max1.jpg" loading="lazy">
+								<img class="contact-picture-avatar" src="assets/contact/iconfinder_user-alt_285645.svg">
 								<h4 class="card-title">Max Hillebrand</h4>
 								<hr>
 								<p class="card-text">Key account manager</p>
