--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
 	<title>zkSNACKs</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Nowadays it is all about individuals’ digital privacy, governments and organisations are
-	making steps to protect privacy in the digital world. We believe that privacy is both
-	a fundamental human right and business need that should be preserved at all times.
-	This is why we focus on your digital financial privacy." />
+	<meta name="description" content="Nowadays it is all about individuals’ digital privacy, governments and organisations are making steps to protect privacy in the digital world. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why we focus on your digital financial privacy." />
 	<meta name="keywords" content="bitcoin wallet, protect privacy, wallet, bitcoin mining, bitcoin worth, bitcoin privacy, exchange, store, bitcoin, privacy policy, financial privacy, blockchain, transparent, opensource, crypto, cryptocurrency, currency" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
@@ -25,266 +21,266 @@
 	<script src="libs/js/slick.js"></script>
 	<!-- Schema.org JSON-LD Markup for Search Engine Optimization -->
 	<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Corporation",
-  "name": "zkSNACKs",
-  "url": "https://zksnacks.com",
-  "logo": "https://zksnacks.com/assets/zksnacks-logo.png",
-	"contactPoint": [
-    {
-      "@type": "ContactPoint",
-      "telephone": "",
-      "contactType": "customer service",
-      "email": "info@zksnacks.com"
-    }
-  ],
-  "sameAs": [
-    "https://twitter.com/Zksnacks_LTD",
-    "https://www.linkedin.com/company/zksnacks/",
-    "https://github.com/zkSNACKs"
-  ]
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Gergely Hajdu",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/greg.jpg",
-  "sameAs": [
-    "https://twitter.com/gergely_hajdu",
-    "https://www.linkedin.com/in/gergelyhajdu/"
-  ],
-  "jobTitle": "CEO",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Balint Harmat",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/balint.jpg",
-  "sameAs": [
-    "https://twitter.com/bharmat84",
-    "https://www.linkedin.com/in/balintharmat//"
-  ],
-  "jobTitle": "CEO",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Adam Ficsor",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/adam.jpg",
-  "sameAs": [
-    "https://twitter.com/nopara73",
-    "https://www.linkedin.com/in/adam-ficsor-102881150/",
-    "https://github.com/nopara73"
-  ],
-  "jobTitle": "Head of Research",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Lucas Ontivero",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/lucas1.jpg",
-  "sameAs": [
-    "https://twitter.com/lontivero",
-    "https://www.linkedin.com/in/lucasontivero/",
-    "https://github.com/lontivero"
-  ],
-  "jobTitle": "Lead Engineer",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "David Molnar",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/david.jpg",
-  "sameAs": [
-    "https://twitter.com/molnardavid84",
-    "https://github.com/molnard"
-  ],
-  "jobTitle": "CTO",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Daniel Walmsley",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/dan1.jpg",
-  "sameAs": [
-    "https://twitter.com/dwuk86",
-    "https://github.com/danwalmsley"
-  ],
-  "jobTitle": "Developer",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Yahia Chiheb",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/iconfinder_user-alt_285645.svg",
-  "sameAs": [
-    "https://twitter.com/yahiheb_",
-    "https://github.com/yahiheb"
-  ],
-  "jobTitle": "Developer",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Jumar Macato",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/jumar.jpg",
-  "sameAs": [
-    "https://twitter.com/jumarmacato",
-    "https://github.com/jmacato/"
-  ],
-  "jobTitle": "Developer",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Martin Rimoczi",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/martin.jpg",
-  "sameAs": [
-    "https://twitter.com/RimocziMartin92",
-    "https://github.com/Rmartin1104"
-  ],
-  "jobTitle": "Junior Developer",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Daniel Beluska",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/daniel.jpg",
-  "sameAs": [
-    "https://twitter.com/JDanielBeluska",
-    "https://www.linkedin.com/in/dan-beluska-a68a63a4/"
-  ],
-  "jobTitle": "Head of Marketing",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "Person",
-  "name": "Max Hillebrand",
-  "url": "",
-  "image": "https://zksnacks.com/assets/contact/iconfinder_user-alt_285645.svg",
-  "sameAs": [
-    "https://twitter.com/HillebrandMax",
-    "https://github.com/MaxHillebrand"
-  ],
-  "jobTitle": "Key account manager",
-  "worksFor": {
-    "@type": "Organization",
-    "name": "zkSNACKs"
-  }  
-}
-</script>
-<script type='application/ld+json'>
-            {
-                "@context": "https://schema.org/",
-                "@type": "SoftwareApplication",
-                "applicationCategory": "FinanceApplication",
-                "name": "Wasabi Wallet",
-                "image": "https://zksnacks.com/assets/wasabi_wallet.png",
-                "availableOnDevice": "Desktop",
-                "author": {
-                    "@type": "Organization",
-                    "url": "https://zksnacks.com",
-                    "name": "zkSNACKs",
-                    "sameAs": [
-                        "https://twitter.com/Zksnacks_LTD",
-                        "https://www.linkedin.com/company/zksnacks/",
-                        "https://github.com/zkSNACKs"
-                      ]
-                },
-                "downloadUrl": "https://wasabiwallet.io/#download",
-                "operatingSystem": [
-                    "Windows",
-                    "Linux",
-                    "macOS"
-                ],
-                "releaseNotes": "https://github.com/zkSNACKs/WalletWasabi/releases",
-                "screenshot": "https://wasabiwallet.io/images/wasabi-wallet-laptop.png",
-                "softwareVersion": "1.1.12",
-                "aggregateRating": {
-                    "@type": "AggregateRating",
-                    "ratingValue": "5",
-                    "ratingCount": "20"
-                },
-                "offers": {
-                    "@type": "Offer",
-                    "price": "0",
-                    "priceCurrency": "BTC"
-                }
-            }
-        </script>
+		{
+			"@context": "https://schema.org",
+			"@type": "Corporation",
+			"name": "zkSNACKs",
+			"url": "https://zksnacks.com",
+			"logo": "https://zksnacks.com/assets/zksnacks-logo.png",
+				"contactPoint": [
+		{
+			"@type": "ContactPoint",
+			"telephone": "",
+			"contactType": "customer service",
+			"email": "info@zksnacks.com"
+		}
+	],
+	"sameAs": [
+		"https://twitter.com/Zksnacks_LTD",
+		"https://www.linkedin.com/company/zksnacks/",
+		"https://github.com/zkSNACKs"
+	]
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Gergely Hajdu",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/greg.jpg",
+		"sameAs": [
+			"https://twitter.com/gergely_hajdu",
+			"https://www.linkedin.com/in/gergelyhajdu/"
+		],
+		"jobTitle": "CEO",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+		}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Balint Harmat",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/balint.jpg",
+		"sameAs": [
+			"https://twitter.com/bharmat84",
+			"https://www.linkedin.com/in/balintharmat//"
+	],
+	"jobTitle": "CEO",
+	"worksFor": {
+		"@type": "Organization",
+		"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Adam Ficsor",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/adam.jpg",
+		"sameAs": [
+			"https://twitter.com/nopara73",
+			"https://www.linkedin.com/in/adam-ficsor-102881150/",
+			"https://github.com/nopara73"
+		],
+		"jobTitle": "Head of Research",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Lucas Ontivero",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/lucas1.jpg",
+		"sameAs": [
+			"https://twitter.com/lontivero",
+			"https://www.linkedin.com/in/lucasontivero/",
+			"https://github.com/lontivero"
+	],
+		"jobTitle": "Lead Engineer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "David Molnar",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/david.jpg",
+		"sameAs": [
+			"https://twitter.com/molnardavid84",
+			"https://github.com/molnard"
+		],
+		"jobTitle": "CTO",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Daniel Walmsley",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/dan1.jpg",
+		"sameAs": [
+			"https://twitter.com/dwuk86",
+			"https://github.com/danwalmsley"
+		],
+		"jobTitle": "Developer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Yahia Chiheb",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/iconfinder_user-alt_285645.svg",
+		"sameAs": [
+			"https://twitter.com/yahiheb_",
+			"https://github.com/yahiheb"
+		],
+		"jobTitle": "Developer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Jumar Macato",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/jumar.jpg",
+		"sameAs": [
+			"https://twitter.com/jumarmacato",
+			"https://github.com/jmacato/"
+		],
+		"jobTitle": "Developer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Martin Rimoczi",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/martin.jpg",
+		"sameAs": [
+			"https://twitter.com/RimocziMartin92",
+			"https://github.com/Rmartin1104"
+		],
+		"jobTitle": "Junior Developer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Daniel Beluska",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/daniel.jpg",
+		"sameAs": [
+			"https://twitter.com/JDanielBeluska",
+			"https://www.linkedin.com/in/dan-beluska-a68a63a4/"
+		],
+		"jobTitle": "Head of Marketing",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org/",
+		"@type": "Person",
+		"name": "Max Hillebrand",
+		"url": "",
+		"image": "https://zksnacks.com/assets/contact/iconfinder_user-alt_285645.svg",
+		"sameAs": [
+			"https://twitter.com/HillebrandMax",
+			"https://github.com/MaxHillebrand"
+		],
+		"jobTitle": "Key account manager",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}  
+	}
+	</script>
+	<script type='application/ld+json'>
+		{
+			"@context": "https://schema.org/",
+			"@type": "SoftwareApplication",
+			"applicationCategory": "FinanceApplication",
+			"name": "Wasabi Wallet",
+			"image": "https://zksnacks.com/assets/wasabi_wallet.png",
+			"availableOnDevice": "Desktop",
+			"author": {
+				"@type": "Organization",
+				"url": "https://zksnacks.com",
+				"name": "zkSNACKs",
+				"sameAs": [
+					"https://twitter.com/Zksnacks_LTD",
+					"https://www.linkedin.com/company/zksnacks/",
+					"https://github.com/zkSNACKs"
+					]
+		},
+		"downloadUrl": "https://wasabiwallet.io/#download",
+		"operatingSystem": [
+			"Windows",
+			"Linux",
+			"macOS"
+			],
+		"releaseNotes": "https://github.com/zkSNACKs/WalletWasabi/releases",
+		"screenshot": "https://wasabiwallet.io/images/wasabi-wallet-laptop.png",
+		"softwareVersion": "1.1.12",
+		"aggregateRating": {
+			"@type": "AggregateRating",
+			"ratingValue": "5",
+			"ratingCount": "20"
+		},
+		"offers": {
+			"@type": "Offer",
+			"price": "0",
+			"priceCurrency": "BTC"
+			}
+		}
+	</script>
 	<!-- End of Schema.org JSON-LD Markup for Search Engine Optimization -->
 </head>
 
